<resources>
    <string name="app_name">VendingMachine</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="img">Img</string>
    <string name="emailpng">EmailPng</string>
    <string name="password">Password</string>
    <string name="passpng">PassPng</string>
    <string name="vending_machine">Vending Machine</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main3">Main3Activity</string>
</resources>
