<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/vending"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:id="@+id/imgvw" android:contentDescription="@string/img"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="520dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">
        <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#fff"
                android:background="@drawable/border"
                android:padding="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginEnd="10dp"
                android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:layout_marginTop="280dp"
            android:id="@+id/lnrlyout">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">
                <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/user"
                        android:layout_gravity="center" android:contentDescription="@string/emailpng"/>
                <EditText
                        android:id="@+id/emailId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:textColorHint="#fff"
                        android:layout_marginStart="15dp"
                        android:background="#00000000"
                        android:letterSpacing="0.1"
                        android:textSize="16sp"
                        android:textColor="#fff"
                        android:inputType="text"
                        tools:ignore="TextFields"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#5fff"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">
                <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/password"
                        android:layout_gravity="center" android:contentDescription="@string/passpng"/>
                <EditText
                        android:id="@+id/passId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:textColorHint="#fff"
                        android:layout_marginStart="15dp"
                        android:background="#00000000"
                        android:inputType="textPassword"
                        android:letterSpacing="0.1"
                        android:textSize="16sp"
                        android:textColor="#fff"
                />
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#5fff"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
            android:id="@+id/bytes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/vending_machine"
            android:textColor="#fff"
            android:textSize="30sp"
            android:gravity="top|center"
            android:textStyle="bold"
            android:layout_alignBottom="@+id/lnrlyout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="39dp"
            android:layout_below="@+id/imgvw" tools:ignore="RtlHardcoded"/>
</RelativeLayout>